# catamaran

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/scripts/: compose-latest.cjs
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  smoke.test.ts  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  capabilities.rs  exec.rs  files.rs  forward.rs  lib.rs  logs.rs  main.rs  mcp.rs  settings.rs  spyglass.rs  updater.rs  watch.rs
apps/desktop/src/components/: ClusterHotbar.test.tsx  ClusterHotbar.tsx  ClusterOverview.test.tsx  ClusterOverview.tsx  ClusterUsage.test.tsx  ClusterUsage.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ContextAvatar.test.tsx  ContextAvatar.tsx  CuratedCrdGroup.test.tsx  CuratedCrdGroup.tsx  CustomResourceBrowser.test.tsx  CustomResourceBrowser.tsx  CustomResourceGroup.test.tsx  CustomResourceGroup.tsx  DetailActions.test.tsx  DetailActions.tsx  Dock.test.tsx  Dock.tsx  EditResourceTab.test.tsx  EditResourceTab.tsx  ForwardDialog.test.tsx  ForwardDialog.tsx  ForwardsIndicator.test.tsx  ForwardsIndicator.tsx  HelmReleasesView.test.tsx  HelmReleasesView.tsx  LandingPage.test.tsx  LandingPage.tsx  LogsView.test.tsx  LogsView.tsx  ManifestEditor.test.tsx  ManifestEditor.tsx  McpSettingsSection.test.tsx  McpSettingsSection.tsx  MetricsPanel.test.tsx  MetricsPanel.tsx  NewResourceEditor.test.tsx  NewResourceEditor.tsx  (+29 more)
apps/desktop/src/components/ui/: badge.tsx  sheet.tsx  table.tsx
apps/desktop/src/lib/: actions.test.ts  actions.ts  aws.test.ts  aws.ts  clusters.test.ts  clusters.ts  controllers.test.ts  controllers.ts  crds.ts  errors.test.ts  errors.ts  exec.test.ts  exec.ts  files.ts  forward.test.ts  forward.ts  helm.ts  logsStream.test.ts  logsStream.ts  manifest.test.ts  manifest.ts  manifestEdit.test.ts  manifestEdit.ts  mcp.ts  mcpClients.test.ts  mcpClients.ts  namespaces.test.ts  namespaces.ts  network.test.ts  network.ts  notify.test.ts  notify.ts  paletteRank.test.ts  paletteRank.ts  panes.test.ts  panes.ts  rbac.test.ts  rbac.ts  recents.ts  requestTimeout.ts  (+18 more)
apps/desktop/src/styles/: globals.css
apps/desktop/src/transport/: transport.test.ts  transport.ts
apps/desktop/src/ui/: Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  CodeEditor.lint.test.ts  CodeEditor.test.tsx  CodeEditor.tsx  ColumnPicker.tsx  Combobox.test.tsx  Combobox.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  Dashboard.tsx  Drawer.test.tsx  Drawer.tsx  IconButton.tsx  LoadingState.test.tsx  LoadingState.tsx  NamespaceMultiSelect.test.tsx  NamespaceMultiSelect.tsx  NavIcon.tsx  Panel.test.tsx  Panel.tsx  Select.test.tsx  Select.tsx  Sparkline.test.tsx  Sparkline.tsx  Spinner.test.tsx  Spinner.tsx  StatusPill.test.tsx  StatusPill.tsx  Table.test.tsx  Table.tsx  Tabs.test.tsx  Tabs.tsx  TextInput.test.tsx  TextInput.tsx  avatar.test.ts  avatar.ts  index.ts  (+4 more)
crates/capability/: Cargo.toml
crates/capability/src/: annotations.rs  error.rs  lib.rs
crates/kube/: Cargo.toml
crates/kube/src/: actions.rs  client_cache.rs  cluster.rs  configmaps.rs  connect.rs  contexts.rs  crds.rs  cronjobs.rs  daemonsets.rs  deployments.rs  embed.rs  endpointslices.rs  events.rs  exec.rs  forward.rs  helm.rs  ingresses.rs  jobs.rs  kubeconfig.rs  lib.rs  limitranges.rs  logs.rs  manifest.rs  metrics.rs  networkpolicies.rs  nodes.rs  persistentvolumes.rs  pvcs.rs  resourcequotas.rs  rolebindings.rs  roles.rs  schema.rs  secrets.rs  serviceaccounts.rs  services.rs  spyglass.rs  sso.rs  statefulsets.rs  storageclasses.rs  watch.rs  (+1 more)
crates/mcp/: Cargo.toml
crates/mcp/src/: completeness.rs  http.rs  lib.rs  stdio.rs
docs/: DEVELOPMENT.md  INSTALL.md  index.html
scripts/: publish.sh
