[package]
name = "catamaran-capability"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
serde = { version = "1", features = ["derive"] }
