[package]
name = "catamaran-kube"
version.workspace = true
edition.workspace = true

[dependencies]
catamaran-capability = { path = "../capability" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["fs", "time", "net", "io-util"] }
kube = { version = "0.96", default-features = false, features = ["client", "config", "rustls-tls", "runtime", "ws"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
futures = "0.3"
base64 = "0.22"
flate2 = "1"
http = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
