[package]
name = "catamaran-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
catamaran-capability = { path = "../capability" }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "macros"] }
axum = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
tower = { version = "0.5", features = ["util"] }
